# gallus-3D

./: CMakeLists.txt  DX12_CODE_REVIEW.md  EDITOR_EXPOSE_IMPROVEMENTS.md  EDITOR_EXPOSE_IMPROVEMENTS_V2.md  EDITOR_EXPOSE_QUICK_START.md  EDITOR_EXPOSE_TEST_EXAMPLE.h  convert.ps1  editor_debug.bat  editor_release.bat  game_debug.bat  game_release.bat  generate.bat  include order.txt  start_game.bat  todo.txt
.github/: copilot-instructions.md
data/assets/: ss.scene  test.scene
data/assets/animations/: explosion.anim  player_walk.anim  player_walk_default.anim  player_walk_down.anim  player_walk_down_left.anim  player_walk_down_right.anim  player_walk_left.anim  player_walk_right.anim  player_walk_up.anim  player_walk_up_left.anim  player_walk_up_right.anim
data/assets/materials/: 1.mat  mat_lit.mat  mat_sprite.mat  mat_unlit.mat
data/assets/models/: mod_faucet.glb  mod_missing.glb
data/assets/prefabs/: bullet.prefab  explosion.prefab
data/assets/scenes/: main.scene  skinning.scene  test.scene  unskinned.scene
data/assets/shaders/: PixelShader.cso  PixelShaderUvDebug.cso  VertexShader.cso  common.hlsl  pixelShader.hlsl  pixelShader3D.hlsl  pixelShaderUvDebug.hlsl  renderTexPixelShader.cso  renderTexPixelShader.hlsl  renderTexVertexShader.cso  renderTexVertexShader.hlsl  test.bat  vertexShader.hlsl  vertexShader3D.hlsl  wireframePixelShader.hlsl
editor/: editor.cmake
editor/src/: Resource.rc  editorMain.cpp
editor/src/core/: EditorTool.h
editor/src/editor/: AssetDatabase.cpp  AssetDatabase.h  AssetType.h  CameraMode.h  Editor.cpp  Editor.h  EditorGlobalFunctions.cpp  EditorGlobalFunctions.h  EditorInputScope.h  EditorSettings.cpp  EditorSettings.h  EditorWorkspace.cpp  EditorWorkspace.h  FileResource.cpp  FileResource.h  GlobalEditorFunctions.cpp  GlobalEditorFunctions.h  editorEntryPoints.cpp  editorEntryPoints.h
engine/: engine.cmake
engine/src/: engineEntryPoints.h
engine/src/animation/: Animation.cpp  Animation.h  AnimationEvents.h  AnimationKeyFrame.cpp  AnimationKeyFrame.h  AnimationKeyFrameComponentBase.cpp  AnimationKeyFrameComponentBase.h  AnimationKeyFrameEventComponent.cpp  AnimationKeyFrameEventComponent.h  AnimationKeyFrameSoundComponent.cpp  AnimationKeyFrameSoundComponent.h  AnimationKeyFrameSpriteComponent.cpp  AnimationKeyFrameSpriteComponent.h  AnimationKeyFrameTagComponent.cpp  AnimationKeyFrameTagComponent.h  AnimationKeyFrameTextureComponent.cpp  AnimationKeyFrameTextureComponent.h  AnimationTrack.cpp  AnimationTrack.h  SpriteAnimationKeyFrame.cpp  SpriteAnimationKeyFrame.h
engine/src/audio/: AudioSystem.cpp  AudioSystem.h  AudioUtils.cpp  AudioUtils.h  ChunkCollection.cpp  ChunkCollection.h  ChunkFilter.cpp  ChunkFilter.h  ChunkHeader.cpp  ChunkHeader.h  ConversionUtils.cpp  Defines.h  Utils.cpp  Utils.h  WAVE_READER_RESULT.h  WaveChunks.cpp  WaveChunks.h  WaveReader.cpp  WaveReader.h  int24_t.h  uint24_t.h
engine/src/core/: ArgProcessor.cpp  ArgProcessor.h  Data.cpp  Data.h  DataStream.cpp  DataStream.h  Engine.cpp  Engine.h  EngineResource.cpp  EngineResource.h  Event.h  FlagEnum.h  Memory.h  Observable.h  ReserveDataStream.cpp  ReserveDataStream.h  ResourceAtlas.cpp  ResourceAtlas.h  Settings.cpp  Settings.h  System.cpp  System.h  Tool.cpp  Tool.h
engine/src/editor/: EditorExpose.cpp  EditorExpose.h  ISerializableObject.cpp  ISerializableObject.h  ISerializableObject.h.bak
engine/src/file/: FILEPCH.h  file_abstractions.cpp  file_abstractions.h
engine/src/gameplay/: ECSBaseSystem.h  Entity.cpp  Entity.h  EntityID.h  (+8 more)
game/: game.cmake
game/src/: gameMain.cpp
game_shared/: game_shared.cmake
imgui_system/: imgui_system.cmake
setup/generate-common-shader-and-hlsl/: generate-hlsl.js  generate-hlsl.js.bak  package-lock.json  package.json
tools/font-embedder/: generate-font-header.js  generate-header-from-font.js  generate-html-from-font.js  generate-icon-font.js  package-lock.json
(+395 files in other folders)
